# small3d

./: .codedocs  .gitignore  .travis.yaml  .travis.yml  BUILDING.md  BoundingBoxes.cpp  BoundingBoxes.h  BoundingBoxes.hpp  CHANGELOG.md  CMakeLists.txt  Configuration.cpp  Configuration.h  EngineException.cpp  EngineException.h  EngineLog.cpp  EngineLog.h  EngineMath.cpp  EngineMath.h  Exception.cpp  Exception.h  Exception.hpp  FindSMALL3D.cmake  GetTokens.cpp  GetTokens.h  GetTokens.hpp  Image.cpp  Image.h  Image.hpp  LICENSE  Logger.cpp  Logger.h  Logger.hpp  MathFunctions.cpp  MathFunctions.h  MathFunctions.hpp  Matrix4x4.cpp  Matrix4x4.h  Model.cpp  Model.h  Model.hpp  (+115 more)
.travis/: install.sh  run.sh
Shaders/OpenGL21/: textureShader.frag
Shaders/OpenGL33/: textShader.frag
assets/: README  TexturedCube.blend  UnspecifiedAnimal.blend  UnspecifiedAnimalWithTexture.blend
bii/: parents.bii  requirements.bii
cmake/: FindGLFW.cmake  FindPORTAUDIO.cmake  FindVORBIS.cmake  README.txt
conan/: conanfile.py
data/: Cube.mtl  CubeNoTexture.mtl
doxygenConfig/: doxygen  header.html  stylesheet.css
libsLicenses/: LICENSE.freetype_0  LICENSE.png_3  LICENSE.vorbis_1
resources/shaders/OpenGL21/: perspectiveMatrixLightedShader.vert  textShader.frag  textureShader.frag
resources/shaders/OpenGL33/: perspectiveMatrixLightedShader.vert  textureShader.frag
sampleGames/: CMakeLists.txt
sampleGames/avoidTheBug/src/: CMakeLists.txt  GameLogic.cpp
sampleGames/chaseTheGoat/include/: GameLogic.hpp  KeyInput.hpp
sampleGames/chaseTheGoat/src/: CMakeLists.txt  GameLogic.cpp  main.cpp
samplegame/: GameLogic.cpp  GameLogic.h  GameLogic.hpp  KeyInput.h  KeyInput.hpp  PlayerView.cpp  PlayerView.h  avoidthebug3d.cpp  main.cpp
samplegame/include/: GameLogic.hpp  KeyInput.hpp
samplegame/resources/sounds/: README
samplegame/src/: CMakeLists.txt  GameLogic.cpp  avoidthebug3d.cpp
samples/AvoidTheBug3D/: CMakeLists.txt  README.md  conanfile.txt
samples/AvoidTheBug3D/include/: GameLogic.hpp  KeyInput.hpp
samples/AvoidTheBug3D/resources/shaders/OpenGL33/: perspectiveMatrixLightedShader.vert
samples/AvoidTheBug3D/src/: CMakeLists.txt  GameLogic.cpp  avoidthebug3d.cpp  main.cpp
samples/ChaseTheGoat3D/: .gitignore  CMakeLists.txt  README.md  conanfile.txt
samples/ChaseTheGoat3D/include/: GameLogic.hpp
samples/ChaseTheGoat3D/src/: CMakeLists.txt  GameLogic.cpp  chasethegoat3d.cpp  main.cpp
search/: all_1.js  all_10.js  all_11.js  all_2.js  all_4.js  all_5.js  all_6.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_67.js  all_69.js  all_6c.js  all_6d.js  all_6f.js  all_7.js  all_72.js  all_73.js  all_76.js  all_77.js  all_7e.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_6.js  classes_65.js  classes_6d.js  classes_7.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  (+29 more)
small3d/include/small3d/: BoundingBoxSet.hpp  BoundingBoxes.hpp  Exception.hpp  GetTokens.hpp  Image.hpp  Logger.hpp  MathFunctions.hpp  Model.hpp  ModelLoader.hpp  Renderer.hpp  SceneObject.hpp  Sound.hpp  SoundData.hpp  SoundPlayer.hpp  Text.hpp  WavefrontLoader.hpp
small3d/include/small3d/OpenGL/: Renderer.hpp
small3d/include/small3d/Vulkan/: Renderer.hpp
small3d/resources/shaders/GLSL450/: perspectiveMatrixLightedShader.vert  simpleShader.frag  textureShader.frag
small3d/resources/shaders/OpenGL21/: perspectiveMatrixLightedShader.vert  textureShader.frag
small3d/resources/shaders/OpenGL33/: perspectiveMatrixLightedShader.vert  textureShader.frag
small3d/src/: BoundingBoxSet.cpp  BoundingBoxes.cpp  CMakeLists.txt  Exception.cpp  GetTokens.cpp  Image.cpp  Logger.cpp  MathFunctions.cpp  Model.cpp  ModelLoader.cpp  Renderer.cpp  SceneObject.cpp  Sound.cpp  SoundData.cpp  SoundPlayer.cpp  Text.cpp  WavefrontLoader.cpp  main.cpp  unit_tests.cpp
small3d/src/Vulkan/: Renderer.cpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
unit_testing/: CMakeLists.txt  conanfile.txt  main.cpp
